GNOME Bugzilla – Bug 671879
Missing and non-working mnemonics in Network dialog
Last modified: 2012-06-14 08:38:05 UTC
#: ../panels/network/network.ui.h:2 msgid "Create..." Missing mnemonic (do not use C which is used by the Cancel button already). #: ../panels/network/network.ui.h:3 msgid "Interface" Missing mnemonic to bind the dropdown widget focus to (via <property name="mnemonic_widget">widget-name</property>). Note that we're under string freeze currently so this is 3.5.x stuff. For the "Air_plane Mode" switch, pressing Alt+P does not do anything (but I have no idea in which module that string resides). http://l10n.gnome.org/POT/network-manager-applet.master/network-manager-applet.master.pot #: ../src/connection-editor/nm-connection-editor.ui.h:11 msgid "Available to all users" Checkbox does not have a mnemonic.
(In reply to comment #0) > http://l10n.gnome.org/POT/network-manager-applet.master/network-manager-applet.master.pot > #: ../src/connection-editor/nm-connection-editor.ui.h:11 > msgid "Available to all users" > Checkbox does not have a mnemonic. network-manager-applet part is fixed by bca0cf1fc94d3b320b2f702faa9a93e0035da5ee
Jiří: ...wondering if network-manager-applet is under a string freeze. At least we got a message about the change to gnome-i18n@, which is not cool.
Created attachment 216366 [details] [review] network: Add mnemonic for Airplane mode This was lost when the airplane mode switch moved up to the top.
Created attachment 216367 [details] [review] network: Add mnemonics The Create dialog was missing mnemonics for several controls.
Created attachment 216368 [details] [review] network: Add a mnemonic for 'Forget Network'
All patches committed, thanks.