network: Add mnemonic for Airplane mode

This was lost when the airplane mode switch moved up to the top.

https://bugzilla.gnome.org/show_bug.cgi?id=671879

Signed-off-by: Richard Hughes <richard@hughsie.com>